--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,5 +6,11 @@
 	</head>
 <body>
 	<h1>Hello World</h1>
+	<form method="post" action="/hello">
+	<!-- ポイント　 th:value -->
+	好きな文字を入力
+		<input type="text" name="text1" th:value="${text1_value}">
+		<input type="submit" value="クリック">
+	</form>
 <body>
 </html>
