--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -12,5 +12,11 @@
 		<input type="text" name="text1" th:value="${text1_value}">
 		<input type="submit" value="クリック">
 	</form>
+	<br/>
+	<form method="post" action="/hello/db">
+		従業員IDを入力:
+		<input type="text" name="text2" th:value="${text2_value}" />
+		<input type="submit" value="クリック" />
+	</form>
 <body>
 </html>
