--- a/bin/main/templates/login/signup.html
+++ b/bin/main/templates/login/signup.html
@@ -15,15 +15,16 @@
 	<div class="page-header">
 		<h1>ユーザー登録画面</h1>
 	</div>
-	
-	<form method="post" th:action="@{/signup}">
+	<!-- th:object（モデルに格納されているオブジェクトを受け取る） -->
+
+	<form method="post" action="/signup" th:object="${signupForm}">
 		<table class="table table-bordered table-hover">
 		<!-- ユーザーIDの入力エリア-->
 		<tr>
 		<th class="active col-sm-3">ユーザID</th>
 			<td>
 				<div class="form-group">
-					<input type="text" class="form-control"/>
+					<input type="text" class="form-control" th:field="*{userId}"/>
 				</div>
 			</td>
 		</tr>
@@ -33,7 +34,7 @@
 		<th class="active">パスワード</th>
 			<td>
 				<div class="form-group">
-					<input type="text" class="form-control"/>
+					<input type="text" class="form-control" th:field="*{password}"/>
 				</div>
 			</td>
 		</tr>
@@ -43,7 +44,7 @@
 			<th class="active">ユーザー名</th>
 				<td>
 				<div class="form-group">
-					<input type="text" class="form-control"/>
+					<input type="text" class="form-control" th:field="*{userName}"/>
 				</div>
 			</td>
 		</tr>
@@ -53,7 +54,7 @@
 		<th class="active">誕生日</th>
 			<td>
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="yyyy/MM/dd"/>
+					<input type="text" class="form-control" placeholder="yyyy/MM/dd" th:field="*{birthday}"/>
 				</div>
 			</td>
 		</tr>
@@ -63,7 +64,7 @@
 			<th class="active">年齢</th>
 				<td>
 					<div class="form-group">
-						<input type="text" class="form-control"/>
+						<input type="text" class="form-control" th:field="*{age}"/>
 					</div>
 				</td>
 			</tr>
@@ -75,12 +76,19 @@
 						<div class="form-group">
 						<!-- ポイント：ラジオボタンの実装 -->
 							<div th:each="item : ${radioMarriage}">
-								<input type="radio" name="radioMarriage" th:text="${item.key}" th:value="${item.value}"></input>
+								<input type="radio" name="radioMarriage" th:text="${item.key}" th:value="${item.value}" th:field="*{marriage}"></input>
 							</div>
 						</div>
 					</td>
 				</tr>
 		</table>
+		
+		<!-- エラーメッセージの一覧表示 -->
+		<ul>
+			<li th:each="error : ${#fields.detailedErrors()}">
+				<span th:text="${error.message}">Error message</span>
+			</li>
+		</ul>
 		<!-- ユーザー登録ボタン -->
 		<button class="btn btn-primary" type="submit">ユーザー登録</button>
 	</form>
