--- a/bin/main/templates/login/homeLayout.html
+++ b/bin/main/templates/login/homeLayout.html
@@ -5,9 +5,9 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8"></meta>
 <!-- Bootstrapの設定-->
-<link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"></link>
-<script th:src="@{/webjars/jquery/1.11.1/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+ <link th:href="@{webjars/bootstrap/4.4.1-1/css/bootstrap.min.css}" rel="stylesheet"/>
+ <script th:href="@{webjars/jquery/3.5.0/js/jquery.min.js}"></script>
+ <script th:href="@{webjars/bootstrap/4.4.1-1/js/bootstrap.min.js}"></script>
 
 <!-- CSSの読込 -->
 <link th:href="@{/css/home.css}" rel="stylesheet"></link>
@@ -32,7 +32,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-2 sidebar">
-				<ul class="nav nav-pills navs-tacked">
+				<ul class="nav nav-pills nav-stacked">
 					<li role="presentation"><a th:href="@{'/userList'}">ユーザ管理</a>
 					</li>
 				</ul>
