--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -1,24 +1,26 @@
 body{
-	paddingtop: 50px;
+	padding-top: 50px;
 }
 
 .sidebar{
-	position: fixed;
 	display: block;
 	top: 50px;
-	bottom: 0;
+	bottom: 0px;
 	background-color: #F4F5F7;
 }
 
 .main{
 	padding-top: 50px;
 	padding-left: 20px;
-	position: fixed;
 	display: block;
 	top: 0px;
-	bottom: 0;
+	bottom: 0px;
 }
 
-.pageheader{
-	margintop: 0px;
+h1{
+	display: block;
+}
+
+.page-header{
+	margin-top: 0px;
 }
